@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
+<CodeBlocks_layout_file>
+	<ActiveTarget name="Linux" />
+	<File name="main.cpp" open="0" top="0" tabpos="0">
+		<Cursor position="1821" topLine="63" />
+	</File>
+</CodeBlocks_layout_file>
